--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,5 @@ rdflib==4.1.1
 requests==2.2.1
 six==1.6.1
 wsgiref==0.1.2
--e https://github.com/ericmoritz/hydra-python-client.git#egg=hydra-python-client
+-e git+https://github.com/ericmoritz/hydra-python-client.git#egg=hydra-python-client
 -e .
